--- a/mainstyle.css
+++ b/mainstyle.css
@@ -17,10 +17,13 @@ h2 {
 }
 
 p {
-    color: Maroon;
+    color: White;
    text-align: center;
 }
-
+h3 {
+    color:  #6D7993;
+   text-align: center;
+}
 
 
 
