--- a/aboutMe.css
+++ b/aboutMe.css
@@ -2,15 +2,14 @@ div.img {
     margin: 0px;
     border: 25px solid #9099A2;
     float: left;
-    width: 215px;
+    width: 25px;
 }
 
 div.img:hover {
     border: 25px solid  #6D7993;
 }
 
-div.img img {
-    width: 100%;
+div.img img {50%;
     height: auto;
 }
 
@@ -18,6 +17,6 @@ div.desc {
     padding: 15px;
     text-align: center;
 }
-</style>
+
 
 
